# promaker

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/promaker/: config_reader.py  github_actions.py  gitignore.py  license_.py  pre_commit.py  project_generator.py  pyproject_toml.py  readme.py  requirements.py  setup.py  tox.py  validators.py  version.py
src/promaker/resources/licenses/: apache20  bsd0clause  bsd1clause  bsd2clause  bsd3clause  gplv3
tests/: config_reader_test.py  license_test.py  tox_test.py  validators_test.py  version_test.py
