[metadata]
name = promaker
description = Python package to generate projects with CI/CD features.
author = Ricky
author_email = p.ricky.dev@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.1.0
url = https://github.com/Ricky294/promaker.git
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    promaker

package_dir =
    =src
test_suite = tests
include_package_data = True
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
python_ci_cd_sample = py.typed

[flake8]
max-line-length = 120
